deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twitter
  name: twitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - image: gcr.io/bootiful/twitter
#        - image: gcr.io/bootiful/joshlong-com-api
          imagePullPolicy: Always
          name: twitter-container
#        - image: gcr.io/bootiful/twitter
#          #        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
#          imagePullPolicy: Always
#          name: twitter
#          ports:
#            - containerPort: 8080

          startupProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          readinessProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            failureThreshold: 60
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/liveness

          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "1Gi"
