deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "twitter-certificate"
    kubernetes.io/ingress.global-static-ip-name: "twitter-ip"
  name: twitter-ingress
spec:
  rules:
    - host: twitter.developeradvocacy.services
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: twitter
                port:
                  number: 80
